--- a/windows/setup-vscode.jsonc
+++ b/windows/setup-vscode.jsonc
@@ -20,6 +20,9 @@
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[powershell]": {
+    "editor.defaultFormatter": "ms-vscode.powershell"
+  },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -28,6 +31,9 @@
   },
   "[vb]": {
     "editor.tabSize": 4
+  },
+  "[xml]": {
+    "editor.defaultFormatter": "redhat.vscode-xml"
   },
   "editor.detectIndentation": false,
   "editor.formatOnPaste": true,
@@ -59,19 +65,23 @@
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
+  "git.autofetch": true,
   "security.workspace.trust.untrustedFiles": "open",
   "window.restoreWindows": "none",
   "workbench.editor.enablePreview": false,
 
-  // Excel Viewer
+  // eamodio.gitlens
+  "gitlens.hovers.currentLine.enabled": false,
+
+  // grapecity.gc-excelviewer
   "csv-preview.lineNumbers": "ordinal",
   "csv-preview.resizeColumns": "all",
 
-  // GitLens
-  "gitlens.hovers.currentLine.enabled": false,
-
-  // PowerShell
+  // ms-vscode.powershell
   "powershell.codeFormatting.autoCorrectAliases": true,
   "powershell.codeFormatting.pipelineIndentationStyle": "IncreaseIndentationAfterEveryPipeline",
-  "powershell.codeFormatting.whitespaceBetweenParameters": true
+  "powershell.codeFormatting.whitespaceBetweenParameters": true,
+
+  // redhat.vscode-xml
+  "redhat.telemetry.enabled": true
 }
