--- a/windows/setup-vscode-stable.jsonc
+++ b/windows/setup-vscode-stable.jsonc
@@ -26,6 +26,9 @@
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[sql]": {
+    "editor.tabSize": 4
+  },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
